[ENGG-5306]: fix api client request tabs spacing (#4325)

--- a/app/src/features/apiClient/screens/apiClient/apiClient.scss
+++ b/app/src/features/apiClient/screens/apiClient/apiClient.scss
@@ -95,6 +95,10 @@
         padding: 6px 4px;
       }
     }
+
+    .ant-tabs-tabpane {
+      padding: var(--requestly-space-3, 6px);
+    }
   }
 
   .api-request-tabs {
